refactor(switch): remove form features in switch

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <h2>Stepper</h2>
             <div>
                 <h3>Horizontal Stepper</h3>
-                <sgds-stepper id="myStepper" activeStep="2"
+                <sgds-stepper id="myStepper" activeStep="1"
                     steps='[{"stepHeader":"Personal Details","component":"1 test"},{"stepHeader":"Address and Contact Information","component":"2 test"},{"stepHeader":"Review","component":"3 test"}]'>
     
                 </sgds-stepper>
@@ -736,6 +736,8 @@
                     <sgds-checkbox  variant = "disabled">disabled</sgds-checkbox>
                     <sgds-switch>Switch</sgds-switch>
                     <sgds-switch icon>Switch with icon</sgds-switch>
+                    <sgds-switch icon size="sm">Switch with icon</sgds-switch>
+                    <sgds-switch icon size="lg">Switch with icon</sgds-switch>
                     <sgds-switch disabled>Switch</sgds-switch>
                     <sgds-switch size="sm">Switch</sgds-switch>
                     <sgds-switch size="lg">Switch</sgds-switch>
