refactor(spinner): use label prop over slot to simplify rendering process

--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
             <h3>With Label</h3>
             <div class="row">
                 <div class="grid">
-                    <sgds-spinner>Loading</sgds-spinner>
-                    <sgds-spinner variant="neutral">Loading</sgds-spinner>
+                    <sgds-spinner label="Loading"></sgds-spinner>
+                    <sgds-spinner variant="neutral" label="Loading"></sgds-spinner>
                 </div>
             </div>
             <h3>Spinner Size</h3>
