chore(*): update index html

--- a/index.html
+++ b/index.html
@@ -166,30 +166,30 @@
 
     <main>
         <div class="container">
-
+            <h2>Icon Button</h2>
             <div class="d-flex-row">
-                <h2>Variants</h2>
+                <h3>Variants</h3>
                 <sgds-icon-button></sgds-icon-button>
                 <sgds-icon-button variant="ghost"></sgds-icon-button>
                 <sgds-icon-button variant="outline"></sgds-icon-button>
                 <sgds-icon-button variant="danger"></sgds-icon-button>
             </div>
             <div class="d-flex-row">
-                <h2>Active</h2>
+                <h3>Active</h3>
                 <sgds-icon-button active></sgds-icon-button>
                 <sgds-icon-button active variant="ghost"></sgds-icon-button>
                 <sgds-icon-button active variant="outline"></sgds-icon-button>
                 <sgds-icon-button active variant="danger"></sgds-icon-button>
             </div>
             <div class="d-flex-row">
-                <h2>Disabled</h2>
+                <h3>Disabled</h3>
                 <sgds-icon-button  disabled></sgds-icon-button>
                 <sgds-icon-button  disabled variant="ghost"></sgds-icon-button>
                 <sgds-icon-button  disabled variant="outline"></sgds-icon-button>
                 <sgds-icon-button  disabled variant="danger"></sgds-icon-button>
             </div>
             <div class="d-flex-row">
-                <h2>Size</h2>
+                <h3>Size</h3>
                 <sgds-icon-button>icon</sgds-icon-button>
                 <sgds-icon-button size="sm"></sgds-icon-button>
                 <sgds-icon-button size="lg"></sgds-icon-button>
