test(textarea): update some failing test

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         ];
     </script>
     <link href='./src/themes/day.css' rel='stylesheet' type='text/css' />
+    <link href='./src/themes/night.css' rel='stylesheet' type='text/css' />
 </head>
 
 
@@ -211,18 +212,18 @@
                 <i class="bi bi-arrow-right" slot="rightIcon"></i>  
                 rightIcon</sgds-link>
             <sgds-icon name="6-square"></sgds-icon>
-            <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test" hideCharacterCount
+            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test" hideCharacterCount
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
             </sgds-textarea>
-            <sgds-textarea required label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
-                placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
-                <span slot="hint-text">Hint text</span>
-            </sgds-textarea>
-            <sgds-textarea readonly value="Filled text" label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
+            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
                 <span slot="hint-text">Hint text</span>
             </sgds-textarea>
-            <sgds-textarea disabled label="Label" name="textarea" textareaclasses="" rows="4" invalidfeedback="test"
+            <sgds-textarea readonly value="Filled text" label="Label" name="textarea" rows="4" invalidfeedback="test"
+                placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
+                <span slot="hint-text">Hint text</span>
+            </sgds-textarea>
+            <sgds-textarea disabled label="Label" name="textarea" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
                 <span slot="hint-text">Hint text</span>
             </sgds-textarea>
