--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <i class="bi bi-arrow-right" slot="rightIcon"></i>  
                 rightIcon</sgds-link>
             <sgds-icon name="6-square"></sgds-icon>
-            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test" hideCharacterCount
+            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
             </sgds-textarea>
             <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test"
