chore(*): update index html

--- a/index.html
+++ b/index.html
@@ -216,17 +216,14 @@
             <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
             </sgds-textarea>
-            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test"
+            <sgds-textarea required label="Label" name="textarea" rows="4" invalidfeedback="test" hintText="Hint text"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
-                <span slot="hint-text">Hint text</span>
             </sgds-textarea>
-            <sgds-textarea readonly value="Filled text" label="Label" name="textarea" rows="4" invalidfeedback="test"
+            <sgds-textarea readonly value="Filled text" label="Label" name="textarea" rows="4" invalidfeedback="test" hintText="Hint text"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
-                <span slot="hint-text">Hint text</span>
             </sgds-textarea>
-            <sgds-textarea disabled label="Label" name="textarea" rows="4" invalidfeedback="test"
+            <sgds-textarea disabled label="Label" name="textarea" rows="4" invalidfeedback="test" hintText="Hint text"
                 placeholder="Placeholder" minlength="" hasFeedback maxlength="100" resize="vertical" defaultvalue="">
-                <span slot="hint-text">Hint text</span>
             </sgds-textarea>
         </div>
         <div class="container">
