chore(radio group): add label and hintText props

--- a/index.html
+++ b/index.html
@@ -805,9 +805,7 @@
                 <h2>Radiogroup</h2>
                 <sgds-radio  value="1" invalid checked>Option 1 </sgds-radio>
                 <form id="radio-submit">
-                    <sgds-radio-group required hasFeedback invalidFeedback="wrong">
-                        <span slot="label">Select an option</span>
-                        <span slot="hint-text">Hint text</span>
+                    <sgds-radio-group required hasFeedback invalidFeedback="wrong" label="Select an option" hintText="Hint text">
                         <sgds-radio value="1">Option 1</sgds-radio>
                         <sgds-radio value="2">Option 2</sgds-radio>
                         <sgds-radio value="3" disabled>Option 3</sgds-radio>
