feat(input): update input styles

--- a/index.html
+++ b/index.html
@@ -867,8 +867,52 @@
                 <div class="row">
                     <div class="col-6 mb-2">
                         <form class="formtest">
-                            <sgds-input name="input1" id="input1" minlength="5" required value="hiz" hasFeedback
+                            <sgds-input name="input1" label="Label" hintText="Hint text" disabled id="input1" minlength="5" required value="Disabled" hasFeedback
                                 invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input1" label="Label" hintText="Hint text" readonly id="input1" minlength="5" required value="Read only" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input1" label="Label" hintText="Hint text" id="input1" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input2" label="Label" hintText="Hint text" prefix="Prefix" id="input2" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input3" label="Label" hintText="Hint text" id="input3" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test" icon='<svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
+                                <path
+                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
+                                </path>
+                            </svg>'></sgds-input>
+                            <sgds-input name="input4" label="Label" hintText="Hint text" prefix="Prefix" id="input4" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test" icon='<svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
+                                <path
+                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
+                                </path>
+                            </svg>'></sgds-input>
+                            <sgds-input name="input5" label="Label" hintText="Hint text" suffix="Suffix" id="input5" minlength="5" required value="hiz" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input6" label="Label" hintText="Hint text" loading id="input6" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input7" label="Label" hintText="Hint text" valid id="input7" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input8" label="Label" hintText="Hint text" loading suffix="Suffix" id="input8" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input9" label="Label" hintText="Hint text" valid suffix="Suffix" id="input9" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test"></sgds-input>
+                            <sgds-input name="input10" label="Label" hintText="Hint text" loading prefix="Prefix" suffix="Suffix" id="input10" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test" icon='<svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
+                                <path
+                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
+                                </path>
+                            </svg>'></sgds-input>
+                            <sgds-input name="input10" label="Label" hintText="Hint text" valid prefix="Prefix" suffix="Suffix" id="input10" minlength="5" required value="" hasFeedback
+                                invalidFeedback="Minimum length 5 test" icon='<svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                fill="currentColor" class="bi bi-airplane" viewBox="0 0 16 16">
+                                <path
+                                    d="M6.428 1.151C6.708.591 7.213 0 8 0s1.292.592 1.572 1.151C9.861 1.73 10 2.431 10 3v3.691l5.17 2.585a1.5 1.5 0 0 1 .83 1.342V12a.5.5 0 0 1-.582.493l-5.507-.918-.375 2.253 1.318 1.318A.5.5 0 0 1 10.5 16h-5a.5.5 0 0 1-.354-.854l1.319-1.318-.376-2.253-5.507.918A.5.5 0 0 1 0 12v-1.382a1.5 1.5 0 0 1 .83-1.342L6 6.691V3c0-.568.14-1.271.428-1.849Zm.894.448C7.111 2.02 7 2.569 7 3v4a.5.5 0 0 1-.276.447l-5.448 2.724a.5.5 0 0 0-.276.447v.792l5.418-.903a.5.5 0 0 1 .575.41l.5 3a.5.5 0 0 1-.14.437L6.708 15h2.586l-.647-.646a.5.5 0 0 1-.14-.436l.5-3a.5.5 0 0 1 .576-.411L15 11.41v-.792a.5.5 0 0 0-.276-.447L9.276 7.447A.5.5 0 0 1 9 7V3c0-.432-.11-.979-.322-1.401C8.458 1.159 8.213 1 8 1c-.213 0-.458.158-.678.599Z">
+                                </path>
+                            </svg>'></sgds-input>
                             <sgds-checkbox name="cb1" id="cb1" value="lolol">no required<span slot="feedback">You are
                                     required to check this.</span></sgds-checkbox>
                             <sgds-checkbox name="cb2" id="cb2" value="lolol1" required hasfeedback
@@ -879,7 +923,7 @@
                             <sgds-button id="submitButton" type="submit">Submit</sgds-button>
                             <sgds-input label="Name" iconName="stack" hintText="this is a hint" required pattern="test"
                                 value="a"></sgds-input>
-                            <sgds-button type="reset">Submit</sgds-button>
+                            <sgds-button type="reset">Reset</sgds-button>
                         </form>
 
                         <form>
