--- a/index.html
+++ b/index.html
@@ -182,35 +182,29 @@
             <sgds-skeleton width="96px" height="96px" borderRadius="50%"></sgds-skeleton>
             <sgds-skeleton width="96px" height="96px" borderRadius="4px"></sgds-skeleton>
             <sgds-skeleton width="128px" height="64px" borderRadius="4px"></sgds-skeleton>
+            <sgds-skeleton width="200px" height="20px" borderRadius="4px"></sgds-skeleton>
+            <sgds-skeleton width="96px" height="96px" borderRadius="50%" sheen></sgds-skeleton>
+            <sgds-skeleton width="96px" height="96px" borderRadius="4px" sheen></sgds-skeleton>
+            <sgds-skeleton width="128px" height="64px" borderRadius="4px" sheen></sgds-skeleton>
+            <sgds-skeleton width="200px" height="20px" borderRadius="4px" sheen></sgds-skeleton>
             </div>
-            <h2>Skeleton Text</h2>
+            <h2>Skeleton Text. Auto-sized by default</h2>
             <div class="d-flex-row">
                 <div class="d-flex-col">
-                    <h3>Paragraph Skeleton defined by rows</h3>
-                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="3"></sgds-skeleton>
+                    <h3>10 rows in 240px height</h3>
+                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="10"></sgds-skeleton>
                 </div>
                 <div class="d-flex-col">
-                    <h3>Paragraph Skeleton with variant=body</h3>
-                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="3"></sgds-skeleton>
+                    <h3>10 rows in 100px height</h3>
+                    <sgds-skeleton width="250px" height="100px" borderRadius="4px" rows="10"></sgds-skeleton>
                 </div>
                 <div class="d-flex-col">
-                    <h3>Paragraph Skeleton with variant=heading</h3>
-                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="3" variant="heading"></sgds-skeleton>
-                </div>
-
-            </div>
-            <div class="d-flex-row">
-                <div class="d-flex-col">
-                    <h3>Paragraph Skeleton with autoSizeRows</h3>
-                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="3" autoSizeRows></sgds-skeleton>
+                    <h3>5 rows in 100px height</h3>
+                    <sgds-skeleton width="250px" height="100px" borderRadius="4px" rows="5"></sgds-skeleton>
                 </div>
                 <div class="d-flex-col">
-                    <h3>AutosizeRows takes precedence over variant</h3>
-                    <sgds-skeleton width="250px" height="240px" borderRadius="4px" rows="5" variant="heading"  autoSizeRows></sgds-skeleton>
-                </div>
-                <div class="d-flex-col">
-                    <h3>AutosizeRows depends on height. Keeps a fixed gap of 8px</h3>
-                    <sgds-skeleton width="250px" height="100px" borderRadius="4px" rows="5" variant="heading"  autoSizeRows></sgds-skeleton>
+                    <h3>5 rows in 100px height</h3>
+                    <sgds-skeleton width="250px" height="100px" borderRadius="4px" rows="5" sheen></sgds-skeleton>
                 </div>
 
             </div>
