feat(divider): initial implementation

--- a/index.html
+++ b/index.html
@@ -177,6 +177,17 @@
 
     <main>
         <div class="container">
+            <h2>Divider</h2>
+            <div class="d-flex-row">
+            <sgds-divider></sgds-divider>
+            <sgds-divider thickness="thick"></sgds-divider>
+            <sgds-divider thickness="thicker"></sgds-divider>
+            </div>
+            <div class="d-flex-row" style="height: 100px">
+            <sgds-divider orientation="vertical"></sgds-divider>
+            <sgds-divider orientation="vertical" thickness="thick"></sgds-divider>
+            <sgds-divider orientation="vertical" thickness="thicker"></sgds-divider>
+            </div>  
             <h2>Skeleton Shapes</h2>
             <div class="d-flex-row">
             <sgds-skeleton width="96px" height="96px" borderRadius="50%"></sgds-skeleton>
