--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         .d-flex-row {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             gap: 1rem;
         }
         sgds-masthead {
