--- a/index.html
+++ b/index.html
@@ -1247,11 +1247,15 @@
                 <div class="container">
                     <h2>Dropdown</h2>
                     <div class="row">
-                        <sgds-dropdown togglerText="Dropdown" menuVariant="default" icon="<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; fill=&quot;currentColor&quot; class=&quot;bi bi-envelope&quot; viewBox=&quot;0 0 16 16&quot;>
-                            <path d=&quot;M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z&quot;/>
-                            </svg>">
-                            <sgds-dropdown-item>Option label</sgds-dropdown-item>
-                            <sgds-dropdown-item>Option label</sgds-dropdown-item>
+                        <sgds-dropdown togglerText="Dropdown" menuVariant="default">
+                            <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-upload" viewBox="0 0 16 16">
+                            <path
+                                d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z" />
+                            <path
+                                d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
+                        </svg>Option label</sgds-dropdown-item>
+                            <sgds-dropdown-item disabled>Option label</sgds-dropdown-item>
                             <sgds-dropdown-item>Option label</sgds-dropdown-item>
                             <sgds-dropdown-item>Option label</sgds-dropdown-item>
                             <sgds-dropdown-item>Option label</sgds-dropdown-item>
