feat(css): add light dom fundamental css

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         ];
     </script>
     <link href='./src/themes/day.css' rel='stylesheet' type='text/css' />
+    <link href='./src/css/reboot.css' rel='stylesheet' type='text/css' />
     <link href='./src/themes/night.css' rel='stylesheet' type='text/css' />
 </head>
 
@@ -178,6 +179,38 @@
 
     <main>
         <div class="container">
+            <h2>Ordered / Unordered List</h2>
+            <div class="d-flex-row">
+                <ol>
+                    <li>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..</li>
+                    <li>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..
+                        <ol>
+                            <li>Sub of Second</li>
+                            <li>Another Sub</li>
+                           </ol>
+                    </li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                </ol>
+                <ul>
+                    <li>hello world</li>
+                    <li>hello world
+                        <ul>
+                            <li>Sub of Second</li>
+                            <li>Another Sub</li>
+                        </ul>
+                    </li>
+                    <li>hello world</li>
+                    <li>hello world</li>
+                </ul>
+            </div>
             <h2>IconList</h2>
             <div class="d-flex-row">
             <sgds-icon-list>
@@ -199,7 +232,6 @@
                         d="M7.988 12.158c-1.851 0-2.941-1.57-2.941-3.99V7.84c0-2.408 1.101-3.996 2.965-3.996 1.857 0 2.935 1.57 2.935 3.996v.328c0 2.408-1.101 3.99-2.959 3.99ZM8 4.951c-1.008 0-1.629 1.09-1.629 2.895v.31c0 1.81.627 2.895 1.629 2.895s1.623-1.09 1.623-2.895v-.31c0-1.8-.621-2.895-1.623-2.895Z" />
                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8Z" />
                 </svg>item one</div>
-                
             </sgds-icon-list>
             <sgds-icon-list size="sm">
                 <div role="listitem"><svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
